--- a/src/main/java/com/mycompany/mavenproject1/Retiro.form
+++ b/src/main/java/com/mycompany/mavenproject1/Retiro.form
@@ -134,6 +134,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="0"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JButton" name="jButton4">
               <Properties>
