--- a/src/main/java/com/mycompany/mavenproject1/Caja.form
+++ b/src/main/java/com/mycompany/mavenproject1/Caja.form
@@ -55,7 +55,7 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="jTextField2" min="-2" pref="271" max="-2" attributes="0"/>
-                      <EmptySpace pref="185" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="jLabel1" min="-2" pref="128" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jTextField1" min="-2" pref="211" max="-2" attributes="0"/>
