--- a/src/main/java/com/mycompany/mavenproject1/Retiro.form
+++ b/src/main/java/com/mycompany/mavenproject1/Retiro.form
@@ -70,7 +70,7 @@
                                   <Component id="jComboBox2" max="32767" attributes="0"/>
                                   <Component id="jTextField2" max="32767" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="52" max="32767" attributes="0"/>
+                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
